--- a/src/css/global.css
+++ b/src/css/global.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
 }
 
 /* -------------------------- */
@@ -32,18 +33,19 @@
     --secondary-green: #98CE00;
     /*para testes*/
 
-    --border-glow: rgba(255, 255, 255, 0.2);
+    --border-glow: rgba(120, 111, 172, 0.1);
     --hover-bg: #04080B;
     --border-translucent: rgba(255, 255, 255, 0.5);
 
 
 
-
-    /*links hero__socials hover*/
+    /* 
+    /*links hero__socials hover
     --events-social: transition: all ease 0.4s;
     --linkedin: #0A66C2;
     --instagram: linear-gradient(to top, #405de6, #833ab4, #c13584);
-    --codepen: #0EBEFF;
+    --codepen: #0EBEFF; 
+    */
 
     /* Configurações - Base */
     --font-main: Helvetica, Arial, sans-serif;
