--- a/src/css/header.css
+++ b/src/css/header.css
@@ -48,7 +48,8 @@
 }
 
 .brand-role {
-    font-size: 0.85rem;
+    margin-top: 6px;
+    font-size: 0.8rem;
     font-weight: 300;
     color: var(--text-grey);
     text-transform: uppercase;
