feat: adicionar links reais e target blank aos icones sociais

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -30,14 +30,12 @@
     --primary-pink: #fc6471;
     /* Rosa Bubblegum */
 
-    --secondary-green: #98CE00;
+    --secondary-green: #98ce00;
     /*para testes*/
 
     --border-glow: rgba(120, 111, 172, 0.1);
-    --hover-bg: #04080B;
+    --hover-bg: #04080b;
     --border-translucent: rgba(255, 255, 255, 0.5);
-
-
 
     /* 
     /*links hero__socials hover
