--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,6 +1,5 @@
 @import "./root.css";
 
-
 /* -------------------------- */
 /* ------ Hero Section ------ */
 /* -------------------------- */
@@ -41,12 +40,11 @@
     display: flex;
     align-items: center;
     gap: 10px;
-
 }
 
 /* tracinho antes do nomen '-' */
 .hero__intro::before {
-    content: '';
+    content: "";
     display: block;
     width: 20px;
     height: 2px;
@@ -87,7 +85,9 @@
 
 /* Animação de piscar */
 @keyframes blink {
-    0%, 100% {
+
+    0%,
+    100% {
         opacity: 1;
     }
 
@@ -107,7 +107,6 @@
         /* Cursor menor no celular */
     }
 }
-
 
 /******************************/
 
